correct spacing

--- a/_sass/blog.scss
+++ b/_sass/blog.scss
@@ -152,6 +152,8 @@
 
 .post-excerpt {
 	font-size: 0.8em;
+	padding-top: $spacing-unit/3;
+	padding-bottom: $spacing-unit;
 	> blockquote {
 	font-size: 0.5em;
 	padding-top: 0.25em;
